[metadata]
name = buildbot_abstract
version = 0.3.12
description = Buildbot abstraction capable of authenticating with a vault server
url = https://github.com/JoelLefkowitz/buildbot-abstract

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = vault
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
homepage = https://buildbot-abstract.readthedocs.io
languages = Python
frameworks = Vault
paradigms = Object Oriented Programming
status = In development

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

# Exclude test packages
[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
